--- a/jQueryPluginClient.htm
+++ b/jQueryPluginClient.htm
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-div{
-background-color:yellow;
-text-align:center;
-font:900 30px Georgia;
-padding:10px;
-top:100px;
-height:100px;
-width:100px;
-position:absolute;
-}
-</style>
+<link rel="stylesheet" href="css/styles.css"></link>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 (function( $ ){
