--- a/jQueryPluginClient.htm
+++ b/jQueryPluginClient.htm
@@ -20,5 +20,6 @@ $(document).ready(function()
 <div id="div-example"  >
 Ad</div>
 <button>Apply jQuery Custom Plugin</button>
+<span>(c) 2015 Carmel Schvartzman - The MVC Club</span>
 </body>
 </html>
